crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__fstring_multiline.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        FStringStart,
        0..4,
        TokenFlags(
            DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "\nhello\n    world\n",
        ),
        4..21,
        TokenFlags(
            DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        FStringEnd,
        21..24,
        TokenFlags(
            DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        FStringStart,
        25..29,
        TokenFlags(
            TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "\n    world\nhello\n",
        ),
        29..46,
        TokenFlags(
            TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        FStringEnd,
        46..49,
        TokenFlags(
            TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        FStringStart,
        50..52,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "some ",
        ),
        52..57,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        57..58,
    ),
    (
        FStringStart,
        58..62,
        TokenFlags(
            DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "multiline\nallowed ",
        ),
        62..80,
        TokenFlags(
            DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        Lbrace,
        80..81,
    ),
    (
        Name(
            "x",
        ),
        81..82,
    ),
    (
        Rbrace,
        82..83,
    ),
    (
        FStringEnd,
        83..86,
        TokenFlags(
            DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | F_STRING,
        ),
    ),
    (
        Rbrace,
        86..87,
    ),
    (
        FStringMiddle(
            " string",
        ),
        87..94,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringEnd,
        94..95,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Newline,
        95..95,
    ),
]
```
