crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__fstring_named_unicode_raw.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        FStringStart,
        0..3,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE,
        ),
    ),
    (
        FStringMiddle(
            "\\N",
        ),
        3..5,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE,
        ),
    ),
    (
        Lbrace,
        5..6,
    ),
    (
        Name(
            "BULLET",
        ),
        6..12,
    ),
    (
        Rbrace,
        12..13,
    ),
    (
        FStringMiddle(
            " normal",
        ),
        13..20,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE,
        ),
    ),
    (
        FStringEnd,
        20..21,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING | RAW_STRING_LOWERCASE,
        ),
    ),
    (
        Newline,
        21..21,
    ),
]
```
