crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__fstring_nested.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        FStringStart,
        0..2,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "foo ",
        ),
        2..6,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        6..7,
    ),
    (
        FStringStart,
        7..9,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "bar ",
        ),
        9..13,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        13..14,
    ),
    (
        Name(
            "x",
        ),
        14..15,
    ),
    (
        Plus,
        16..17,
    ),
    (
        FStringStart,
        18..20,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        20..21,
    ),
    (
        Name(
            "wow",
        ),
        21..24,
    ),
    (
        Rbrace,
        24..25,
    ),
    (
        FStringEnd,
        25..26,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Rbrace,
        26..27,
    ),
    (
        FStringEnd,
        27..28,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Rbrace,
        28..29,
    ),
    (
        FStringMiddle(
            " baz",
        ),
        29..33,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringEnd,
        33..34,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringStart,
        35..37,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "foo ",
        ),
        37..41,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        Lbrace,
        41..42,
    ),
    (
        FStringStart,
        42..44,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "bar",
        ),
        44..47,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringEnd,
        47..48,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        Rbrace,
        48..49,
    ),
    (
        FStringMiddle(
            " some ",
        ),
        49..55,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        Lbrace,
        55..56,
    ),
    (
        FStringStart,
        56..58,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "another",
        ),
        58..65,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringEnd,
        65..66,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Rbrace,
        66..67,
    ),
    (
        FStringEnd,
        67..68,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        Newline,
        68..68,
    ),
]
```
