crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__fstring_with_format_spec.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        FStringStart,
        0..2,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        2..3,
    ),
    (
        Name(
            "foo",
        ),
        3..6,
    ),
    (
        Colon,
        6..7,
    ),
    (
        Rbrace,
        7..8,
    ),
    (
        FStringMiddle(
            " ",
        ),
        8..9,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        9..10,
    ),
    (
        Name(
            "x",
        ),
        10..11,
    ),
    (
        Equal,
        11..12,
    ),
    (
        Exclamation,
        12..13,
    ),
    (
        Name(
            "s",
        ),
        13..14,
    ),
    (
        Colon,
        14..15,
    ),
    (
        FStringMiddle(
            ".3f",
        ),
        15..18,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Rbrace,
        18..19,
    ),
    (
        FStringMiddle(
            " ",
        ),
        19..20,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        20..21,
    ),
    (
        Name(
            "x",
        ),
        21..22,
    ),
    (
        Colon,
        22..23,
    ),
    (
        FStringMiddle(
            ".",
        ),
        23..24,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        24..25,
    ),
    (
        Name(
            "y",
        ),
        25..26,
    ),
    (
        Rbrace,
        26..27,
    ),
    (
        FStringMiddle(
            "f",
        ),
        27..28,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Rbrace,
        28..29,
    ),
    (
        FStringMiddle(
            " ",
        ),
        29..30,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        30..31,
    ),
    (
        String(
            "",
        ),
        31..33,
    ),
    (
        Colon,
        33..34,
    ),
    (
        FStringMiddle(
            "*^",
        ),
        34..36,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        36..37,
    ),
    (
        Int(
            1,
        ),
        37..38,
    ),
    (
        Colon,
        38..39,
    ),
    (
        Lbrace,
        39..40,
    ),
    (
        Int(
            1,
        ),
        40..41,
    ),
    (
        Rbrace,
        41..42,
    ),
    (
        Rbrace,
        42..43,
    ),
    (
        Rbrace,
        43..44,
    ),
    (
        FStringMiddle(
            " ",
        ),
        44..45,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        45..46,
    ),
    (
        Name(
            "x",
        ),
        46..47,
    ),
    (
        Colon,
        47..48,
    ),
    (
        Lbrace,
        48..49,
    ),
    (
        Lbrace,
        49..50,
    ),
    (
        Int(
            1,
        ),
        50..51,
    ),
    (
        Rbrace,
        51..52,
    ),
    (
        Dot,
        52..53,
    ),
    (
        Name(
            "pop",
        ),
        53..56,
    ),
    (
        Lpar,
        56..57,
    ),
    (
        Rpar,
        57..58,
    ),
    (
        Rbrace,
        58..59,
    ),
    (
        Rbrace,
        59..60,
    ),
    (
        FStringEnd,
        60..61,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Newline,
        61..61,
    ),
]
```
