crates/sifr_python_parser/src/snapshots/sifr_python_parser__lexer__tests__fstring_with_ipy_escape_command.snap
---
source: crates/sifr_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        FStringStart,
        0..2,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "foo ",
        ),
        2..6,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Lbrace,
        6..7,
    ),
    (
        Exclamation,
        7..8,
    ),
    (
        Name(
            "pwd",
        ),
        8..11,
    ),
    (
        Rbrace,
        11..12,
    ),
    (
        FStringMiddle(
            " bar",
        ),
        12..16,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        FStringEnd,
        16..17,
        TokenFlags(
            DOUBLE_QUOTES | F_STRING,
        ),
    ),
    (
        Newline,
        17..17,
    ),
]
```
